# Adivasi-Ecommerce-platform

./: .env  README.md  app.py  pyproject.toml  requirements.txt
api/: index.py
templates/: buydashboard.html  index.html  login.html  new.html  profilebuyer.html  sellerdashboard.html
