[project]
name = "adivasi-ecommerce-platform"
version = "0.1.0"
dependencies = [
    "Flask==2.3.3",
    "Flask-CORS==4.0.0",
    "bcrypt==4.0.1",
    "ibmcloudant==0.0.27",
    "ibm-cloud-sdk-core==3.16.6",
    "python-dotenv==1.0.0",
]

[tool.uv.extra-build-dependencies]
ibm-cloud-sdk-core = ["setuptools"]
